WebAccess class for Kraken and Yahoo