@@ -3,7 +3,8 @@ package name.abuchen.portfolio.online.impl;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
@@ -37,8 +38,8 @@ import name.abuchen.portfolio.money.Values;
 import name.abuchen.portfolio.online.QuoteFeed;
 import name.abuchen.portfolio.online.impl.variableurl.Factory;
 import name.abuchen.portfolio.online.impl.variableurl.urls.VariableURL;
+import name.abuchen.portfolio.util.OnlineHelper;
 import name.abuchen.portfolio.util.TextUtil;
-import name.abuchen.portfolio.util.WebAccess;
 
 public class HTMLTableQuoteFeed implements QuoteFeed
 {
@@ -390,7 +391,7 @@ public class HTMLTableQuoteFeed implements QuoteFeed
 
     protected String getUserAgent()
     {
-        return null;
+        return OnlineHelper.getUserAgent();
     }
 
     protected boolean isIgnoreContentType()
@@ -402,14 +403,13 @@ public class HTMLTableQuoteFeed implements QuoteFeed
     {
         try
         {
-            URL urlObject = new URL(url);
-            String html = new WebAccess(urlObject.getHost(), urlObject.getPath()).withScheme(urlObject.getProtocol())
-                            .addUserAgent(getUserAgent()).get();
-            return parse("n/a", Jsoup.parse(html), errors); //$NON-NLS-1$
+            String escapedUrl = new URI(url).toASCIIString();
+            return parse(escapedUrl, Jsoup.connect(escapedUrl).userAgent(getUserAgent())
+                            .ignoreContentType(isIgnoreContentType()).timeout(30000).get(), errors);
         }
-        catch (IOException e)
+        catch (URISyntaxException | IOException e)
         {
-            errors.add(new IOException(url.toString() + '\n' + e.getMessage(), e));
+            errors.add(new IOException(url + '\n' + e.getMessage(), e));
             return Collections.emptyList();
         }
     }
